--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/16c5c7980a.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
